# Quadruped_Wrapper

./: .gitmodules  README.md
custom_description/: CMakeLists.txt  package.xml
custom_description/launch/: gazebo_world.launch  unitree_hw.launch  unitree_hw_only.launch  world_with_two_robots.launch
custom_description/launch/worlds/: step.world  stepping_stone_new.world
custom_description/urdf/: robot.xacro  robot_with_prefix.xacro  sensor_d435.xacro  sensor_t265.xacro
custom_description/urdf/connected_robots/: connected_robot.xacro  robot_macro.xacro  robot_with_prefix.xacro  rod_with_joints.xacro  rod_with_joints_macro.xacro
custom_gazebo/: CMakeLists.txt  custom_legged_hw_sim_plugins.xml  package.xml
custom_gazebo/include/custom_gazebo/: CustomLeggedHWSim.h
custom_gazebo/src/: CustomLeggedHWSim.cpp
fieldai_legged_perceptive_controllers/config/: aliengo.yaml  controllers.yaml  elevation_mapping_hardware.yaml
fieldai_legged_perceptive_controllers/include/: GaitPublisher.h
fieldai_legged_perceptive_controllers/launch/: elevation_mapping.launch  elevation_mapping_hardware.launch  load_controller.launch
fieldai_legged_perceptive_controllers/src/: GaitPublisher.cpp  controller_client_node.cpp
fieldai_legged_perceptive_description/launch/: unitree_hw.launch
fieldai_legged_perceptive_description/launch/worlds/: empty_world.world
fieldai_legged_perceptive_description/urdf/: robot.xacro
legged_deployment/: CMakeLists.txt  package.xml
legged_deployment/config/: convex_plane_decomposition_node.yaml  elevation_mapping.yaml  elevation_mapping_fixed.yaml  elevation_mapping_hardware.yaml  rviz.rviz
legged_deployment/config/plots/: joints_effort.xml  odom.xml
legged_deployment/include/: CmdPublisher.h
legged_deployment/include/legged_deployment/: CmdPublisher.h
legged_deployment/launch/: cameras.launch  elevation_mapping.launch  elevation_mapping_fixed.launch  elevation_mapping_fixed_new.launch  elevation_mapping_hardware.launch  load_controller.launch  mocap.launch  plot.launch  rviz.launch
legged_deployment/sample_data/: step.pcd  step.ply  step_10cm.ply
legged_deployment/src/: CmdPublisher.cpp  GaitCommandNode.cpp  GaitPublisher.cpp  bagfile_recorder.cpp
robot_description/launch/: unitree_hw.launch
robot_description/urdf/: robot.xacro
scripts/: hardware.yaml  hardware_new.yaml  hardware_with_perception.yaml  hardware_without_payload.yaml  hardware_without_perception.yaml  nuc.yaml  pc.yaml  simulation.yaml  simulation_fixed_map.yaml  simulation_with_perception.yaml  simulation_without_payload.yaml  simulation_without_perception.yaml
teleop_twist_keyboard/: teleop_twist_keyboard.py
