<?xml version="1.0"?>
<package format="2">
    <name>legged_deployment</name>
    <version>0.0.0</version>
    <description>legged_deployment</description>
    <maintainer email="somboles@usc.edu">Mohsen Sombolestan</maintainer>
    <license>TODO</license>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>legged_controllers</depend>
    <depend>legged_unitree_description</depend>
    <depend>legged_perceptive_description</depend>
    <depend>legged_perceptive_controllers</depend>
    <depend>elevation_mapping</depend>
    <depend>elevation_mapping_demos</depend>
    <depend>custom_description</depend>
    <depend>teleop_twist_keyboard</depend>

    <depend>legged_gazebo</depend>
    <depend>realsense_gazebo_plugin</depend>

    <depend>legged_unitree_hw</depend>
    
</package>
